fix scroll stats ? -webkit-overflow-scrolling: touch;

--- a/src/assets/scss/_stats_view.scss
+++ b/src/assets/scss/_stats_view.scss
@@ -24,6 +24,7 @@
     padding: 0 1rem;
     max-height: calc(100vh - 250px);
     overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
